--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,36 @@
     animation-delay: 400ms;
 }
 
+.mt-100px {
+    margin-top: 100px !important;
+}
+
+.service-card {
+    position: relative;
+    #bgIcon {
+        position:absolute;
+        z-index: -1;
+    }
+}
+
+.service-card:hover {
+    color: var(--bs-light);
+    transition: all 300ms ease-out both;
+    p {
+        color: var(--bs-light) !important;
+        transition: all 300ms ease-out both;
+    }
+    #bgIcon {
+        padding: 2rem !important;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        transition: all 300ms ease-out;
+        animation: service-card-icon 300ms ease-out both;
+    }
+}
+
 .bg-image-1 {
     background-image: linear-gradient(0deg, rgba(194, 218, 255, 0.9), rgba(194, 218, 255, 0.9)), url("../assets/img/placeholder.jpg");
     background-size:cover;
@@ -57,5 +87,16 @@
     to {
         opacity: 1;
         transform: translate3d(0, 0 ,0);
+    }
+}
+
+@keyframes service-card-icon {
+    from { 
+        width: 60px;
+        height: 60px;
+    }
+    to {
+        width: 100%;
+        height: 100%;
     }
 }
